---------------------------------------------------------------------------------------------------
Version: 0.3.11
Date: 2021-01-18
  Changes:
    - localisation improved: text styles
    - providing better information on technology effets panel
  Bugfixes:
    - fixing crash clicking on lab in technology panel header
---------------------------------------------------------------------------------------------------
Version: 0.3.10
Date: 2021-01-18
  Changes:
    - [tech] changing assert into dassert, then debugger version
  Bugfixes:
    - fixing crash when PickerTweaks enabled
---------------------------------------------------------------------------------------------------
Version: 0.3.9
Date: 2021-01-18
  Bugfixes:
    - instrumenting for crash: "Gui element with name Item.glassworks-mk01 already present in the parent element." (not fixed yet)
---------------------------------------------------------------------------------------------------
Version: 0.3.8
Date: 2021-01-18
  Bugfixes:
    - fixing crash: "Error while applying migration: ingteb: 0.3.1.lua"
---------------------------------------------------------------------------------------------------
Version: 0.3.7
Date: 2021-01-18
  Bugfixes:
    - fixing crash: " no such file ingteb/ingteb/ingteb/remindortask.lua no such file" (hopefully, since on Windows I cannot reproduce)
---------------------------------------------------------------------------------------------------
Version: 0.3.6
Date: 2021-01-18
  Changes:
    - localisation of column headers of presentator
    - tooltips for icons on select-remindor
  Bugfixes:
    - fixing freeze when clicking on research potion in technology panel
    - fixing history buttons do not work anymore
---------------------------------------------------------------------------------------------------
Version: 0.3.5
Date: 2021-01-17
  Changes:
    - flib 0.6.1-dependency set
    - default settings for reminder tasks are set to all off
  Bugfixes: