@@ -80,11 +80,39 @@ function Helper.DeepEqual(a, b)
 
 end
 
+local function EnsureMaxParameters(target, count)
+    if #target <= count then return target end
+    dassert(target[1] == "")
+    local half = math.ceil(#target / 2)
+
+    local result1 = {""}
+    for index = 2, half do
+        table.insert(result1, target[index])
+    end 
+
+    local result2 = {""}
+    for index = half+1, #target do
+        table.insert(result2, target[index])
+    end 
+
+    return {"", EnsureMaxParameters(result1, count), EnsureMaxParameters(result2, count)}
+end
+
+function Helper.ScrutinizeLocalisationString(target)
+    if type(target) ~= "table" then return target end
+    for index = 2, #target do
+        target[index] = Helper.ScrutinizeLocalisationString(target[index])
+    end 
+    return EnsureMaxParameters(target, 20)
+end
+
+
 function Helper.SpriteStyleFromCode(code)
     return code == true and "ingteb-light-button" --
     or code == false and "red_slot_button" --
     or "slot_button"
 end
+
 
 ---Create frame and add content
 --- Provided actions: location_changed and closed
