@@ -8,7 +8,7 @@ ingteb-fore-key=go to next page
 
 [ingteb-utility]
 control-style=__CONTROL_STYLE_BEGIN____1____CONTROL_STYLE_END__
-remark-style=REMARK_COLOR_BEGIN____1____REMARK_COLOR_END__
+remark-style=__REMARK_COLOR_BEGIN____1____REMARK_COLOR_END__
 multiple-research=research prerequisites.
 selector=Select a target for help
 initial-technology=Initially unlocked
